--- a/css/hpStyle.css
+++ b/css/hpStyle.css
@@ -1,4 +1,4 @@
-.page-landing{
+/*.page-landing{
   display: none
 }
 .page-winner{
@@ -6,6 +6,15 @@
 }
 .page-collage{
 	display: none;
+}*/
+.page-landing{
+  display: block
+}
+.page-winner{
+    display: block
+}
+.page-collage{
+    display: block;
 }
 .congo-entries-title{
 	color: #ffb81c;
@@ -52,6 +61,9 @@
     border: 4px solid white;
     border-radius: 5px;
     padding: 3rem 0;
+}
+.chance-to-visit{
+    color:white;
 }
 // Extra small devices (portrait phones, less than 576px)
 // No media query since this is the default in Bootstrap
