--- a/css/layout.css
+++ b/css/layout.css
@@ -10,11 +10,15 @@ body{
   background-color: #01081f;
   font-size: 1rem;
   color: #ffffff;
+  background: url(../img/bg-blur.jpg) #01081f;
+  background-size: 100%;
+  background-repeat: repeat;  
 }
 .hp-bg{
     background: url(../img/bg.png);
     background-size: 100%;
     background-repeat: no-repeat;
+
     /* background-color: #01081f; */
 }
 .top-img-col img{
@@ -54,6 +58,9 @@ body{
 }
 .text-hp-red{
   color:#e74c3c;
+}
+.text-hp-gray{
+  color: #c5d0e6;
 }
 .navbar-brand{
       position: relative;
@@ -165,6 +172,18 @@ button.btn.btn-submit {
    font-size:13px;
    padding:8px 18px 
 }
+.hp-input-group-text input[type="checkbox"] {
+    position:absolute;
+    right: 1.2rem;
+    top: 1rem;
+    width: 1.25rem;
+    height: 1.25rem;
+}
+.download-count{
+  position: absolute;
+  right: 0.5rem;
+  top: 0.5rem;
+}
 .footer-section a {
   color:#7e8085;    
   font-size: 12px;
@@ -179,8 +198,97 @@ button.btn.btn-submit {
   background-color: #ffffff;
   color: #6c757d;
 }
+.icon-camera ,.icon {
+  position: relative;
+}
+.icon-camera:before{
+  content: '';
+  display: inline-block;
+  background: url(../img/photo-camera.png) no-repeat;
+  height: 20px;
+  width: 25px;
+  position: absolute;
+  left: -37px;
+}
+.icon-invoice:before{
+  content: '';
+  display: inline-block;
+  background: url(../img/invoice.png) no-repeat;
+  height: 27px;
+  width: 34px;
+  position: absolute;
+  left: 5px;
+  background-size: contain;
+}
+.icon-printer:before{
+  content: '';
+  display: inline-block;
+  background: url(../img/printer.png) no-repeat;
+  height: 27px;
+  width: 34px;
+  position: absolute;
+  left: 5px;
+  background-size: contain;
+}
+.icon-win:before{
+  content: '';
+  display: inline-block;
+  background: url(../img/upload.png) no-repeat;
+  height: 27px;
+  width: 34px;
+  position: absolute;
+  left: 5px;
+  background-size: contain;
+}
+.carousal-modal .modal-content{
+  border: 0;
+  background: none !important;
+}
+.carousel-inner > .item > img{
+margin:auto;
+width:100%
+}
+.carousal-modal .modal-content img {
+    width: 75%;
+    margin: 0 auto;
+}
+button#dropdownMenuButton {
+    text-align: left;
+}
+
 @media (min-width: 576px){
     .modal-dialog {
-        max-width: 450px;
+        max-width: 590px;
     }
+    .carousal-modal .modal-dialog {
+        max-width: 800px;
+    }
+    .hp-modal-sm.modal-dialog {
+        max-width: 450px !important;
+    }
+    .carousel-control-next{
+      left: 48rem;      
+    }
+    .carousel-control-prev{
+      left: -8rem;
+    }
+    .modal-dialog {
+        margin: 2.75rem auto;
+    }
+
+}
+.parent {
+   width: 42px; 
+   height: 50px;
+}
+.parent img {
+   height: 100%;
+   width: 10%;
+}
+@media (max-width: 576px){
+    .congo-entries-title span::after ,.congo-entries-title span::before{
+      content: '';
+      background: none !important;
+    }
+    
 }
