--- a/css/layout.css
+++ b/css/layout.css
@@ -10,16 +10,26 @@ body{
   background-color: #01081f;
   font-size: 1rem;
   color: #ffffff;
-  background: url(../img/bg-blur.jpg) #01081f;
+  /*background: url(../img/bg-blur.jpg) #01081f;*/
   background-size: 100%;
   background-repeat: repeat;  
+   overflow-x: hidden;
 }
 .hp-bg{
     background: url(../img/bg.png);
     background-size: 100%;
     background-repeat: no-repeat;
-
     /* background-color: #01081f; */
+}
+.navbar-toggler .icon-bar {
+    background-color: #ffffff;
+}
+.navbar-toggler .icon-bar {
+    display: block;
+    width: 24px;
+    height: 4px;
+    border-radius: 2px;
+    margin-top: 0.4rem;
 }
 .top-img-col img{
   height: 80%;
@@ -285,10 +295,24 @@ button#dropdownMenuButton {
    height: 100%;
    width: 10%;
 }
+.d-md-block {
+  display: block;
+}
+
+.d-sm-block{
+  display: none !important;
+}
 @media (max-width: 576px){
     .congo-entries-title span::after ,.congo-entries-title span::before{
       content: '';
       background: none !important;
+    }
+    .d-md-block {
+      display: none !important;
+    }
+
+    .d-sm-block{
+      display: block !important;
     }
     
 }
