--- a/css/layout.css
+++ b/css/layout.css
@@ -24,6 +24,9 @@ body{
 .navbar-toggler .icon-bar {
     background-color: #ffffff;
 }
+.navbar-collapse {
+  flex-flow: row-reverse;
+}
 .navbar-toggler .icon-bar {
     display: block;
     width: 24px;
