--- a/css/layout.css
+++ b/css/layout.css
@@ -21,6 +21,11 @@ body{
     background-repeat: no-repeat;
     /* background-color: #01081f; */
 }
+.navbar-light .navbar-toggler {
+    color: rgb(255, 255, 255);
+    border-color: rgb(255, 250, 250);
+    border: 2px solid #ffffff;
+}
 .navbar-toggler .icon-bar {
     background-color: #ffffff;
 }
