--- a/css/layout.css
+++ b/css/layout.css
@@ -140,12 +140,37 @@ li.nav-item{
 .modal-content {
     border-radius: 10px;
 }
-button.close {
-    position: absolute;
-    right: -8rem;
-    top: -7rem;
+button.close{
+  opacity: 1;
 }
-
+button.close::after{
+    content: 'X';
+    position: absolute;
+    right: -2rem;
+    top: -2rem;
+    background: white;
+    border-radius: 50%;
+    height: 1.5rem;
+    width: 1.5rem;
+    z-index: 999999;
+    font-size: 1rem;
+    color: #3487d4;
+    line-height: 1.5;
+}
+.carousal-modal button.close::after {
+    content: 'X';
+    position: absolute;
+    right: 2rem;
+    top: -2rem;
+    background: white;
+    border-radius: 50%;
+    height: 1.5rem;
+    width: 1.5rem;
+    z-index: 999999;
+    font-size: 1rem;
+    color: #3487d4;
+    line-height: 1.5;
+}
 .modal-dialog {
     margin: 7.75rem auto;
 }
@@ -267,7 +292,7 @@ margin:auto;
 width:100%
 }
 .carousal-modal .modal-content img {
-    width: 75%;
+    width: 90%;
     margin: 0 auto;
 }
 button#dropdownMenuButton {
@@ -325,5 +350,8 @@ button#dropdownMenuButton {
     .navbar-brand {
       margin-left: 0%; 
       padding-left: 0rem !important;
+    }
+    .hp-modal-sm.modal-dialog{
+      width:380px !important;
     }
 }
