--- a/css/layout.css
+++ b/css/layout.css
@@ -39,9 +39,9 @@ body{
     border-radius: 2px;
     margin-top: 0.4rem;
 }
-.top-img-col img{
+/*.top-img-col img{
   height: 80%;
-}
+}*/
 .hp-h3{
   font-size: 1.7rem;
 }
