--- a/css/layout.css
+++ b/css/layout.css
@@ -10,20 +10,35 @@ body{
   background-color: #01081f;
   font-size: 1rem;
   color: #ffffff;
-  /*background: url(../img/bg-blur.jpg) #01081f;*/
+  /* background: url(../img/bg-blur.png); */
   background-size: 100%;
-  background-repeat: repeat;  
-   overflow-x: hidden;
+  background-repeat: repeat;
+}
+.f-w-800{
+  font-weight: 800 !important;
+}
+span#btn-started {
+    background: #ffffff;
+    color: #3487d4;
+    border-color: #ffffff !important;
 }
 .hp-bg{
     background: url(../img/bg.png);
     background-size: 100%;
     background-repeat: no-repeat;
-    /* background-color: #01081f; */
+    background-color: #01081f;
     position: relative;
 }
-.hp-bg .container.page-landing {
+/*.hp-bg .container.page-landing {
     padding-top: 6rem;
+}*/
+.next-arrow {
+    margin-top: 7rem !important;
+    margin-bottom: 3rem !important;
+}
+.next-arrow img {
+    width: 3% !important;
+    height: 28% !important;
 }
 .navbar-light .navbar-toggler {
     color: #ffffff;
@@ -243,9 +258,9 @@ button.btn.btn-submit {
   font-size: 12px;
 } 
 .input-group>.input-group-append>.input-group-text{
-   background:#3487d4;
-   color:#ffffff;
-   border-color: #3487d4 !important;
+   background: #ffffff;
+    color: #3487d4;
+    border-color: #ffffff !important;
 }
 .hp-drop-down{
   border-color: #3487d4;
@@ -350,9 +365,9 @@ button#dropdownMenuButton {
     padding-left:1.4rem !important;
 }
 @media (max-width: 576px){
-      .hp-bg .container.page-landing {
-        padding-top: 3rem;
-    }
+    /*.hp-bg .container.page-landing {
+      padding-top: 3rem;
+    }*/
     .congo-entries-title span::after ,.congo-entries-title span::before{
       content: '';
       background: none !important;
@@ -393,5 +408,9 @@ button#dropdownMenuButton {
       flex: 1;
       flex-direction: row-reverse; 
       padding-right: 1rem;
+    }
+    .next-arrow {
+        margin-top: 3rem !important;
+        /*margin-bottom: 3rem !important;*/
     }
 }
