--- a/css/layout.css
+++ b/css/layout.css
@@ -7,7 +7,7 @@ html, body {
 }
 body{
   font-family: myHPFont;
-  background-color: #130634;
+  background-color: #01081f;
   font-size: 1rem;
   color: #ffffff;
   /* background: url(../img/bg-blur.png); 
